--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,9 +4,9 @@ html(lang=en)
 		meta(charset="utf-8")
 		title= title
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css")
-		link(rel='stylesheet', href='css/style.css')
+		link(rel='stylesheet', href='/css/style.css')
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/popper.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js")
 	body
 	.container
