--- a/views/paypal/home.pug
+++ b/views/paypal/home.pug
@@ -12,12 +12,13 @@ block content
 			li Input amount and/or description
 			li Click <kbd>Pay with PalPal</kbd> button
 			li Auto redirect to PayPal and input PayPal account
+			li You can use this Paypal Test Account: tester8@test.com, password: 00000000
 			li If payment successful, it redirects to Payment Successful page. Otherwise it redirects to Payment Failure page.
 
 	form(action="/paypal/submit" method="POST")
 		.form-group
-			label(for="amount") Amount to pay in USD
-			input(id="amount" class="form-control col-4" type="number" name="amount" value="1" min="1" max="99")
+			label(for="amount") Amount to pay in USD (1 - 9, default 1)
+			input(id="amount" class="form-control col-4" type="number" name="amount" value="1" min="1" max="9")
 		.form-group
 			label(for="description") Payment description
 			input#description.form-control(type="text" name="description" maxlength="100" placeholder="Optional")
