--- a/views/paypal/home.pug
+++ b/views/paypal/home.pug
@@ -10,7 +10,7 @@ block content
 		ul
 			li NodeJS with paypal-rest-sdk NPM
 			li Input amount and/or description
-			li Click <kbd>Pay with PalPal</kbd> button
+			li Click <kbd>Pay with PayPal</kbd> button
 			li Auto redirect to PayPal and input PayPal account
 			li You can use this Paypal Test Account: tester8@test.com, password: 00000000
 			li If payment successful, it redirects to Payment Successful page. Otherwise it redirects to Payment Failure page.
