Add icon to PayPal success & failure page pages

--- a/views/paypal/home.pug
+++ b/views/paypal/home.pug
@@ -12,7 +12,7 @@ block content
 			li Input amount and/or description
 			li Click <kbd>Pay with PayPal</kbd> button
 			li Auto redirect to PayPal and input PayPal account
-			li You can use this Paypal Test Account: tester8@test.com, password: 00000000
+			li You can use this Paypal Test Account: <kbd>tester8@test.com</kbd>, password: <kbd>00000000</kbd>
 			li If payment successful, it redirects to Payment Successful page. Otherwise it redirects to Payment Failure page.
 
 	form(action="/paypal/submit" method="POST")
