--- a/views/paypal/payment-cancel.pug
+++ b/views/paypal/payment-cancel.pug
@@ -8,6 +8,7 @@ block content
 			a(href="/paypal") PayPal
 		li.breadcrumb-item.active Payment return
 	.jumbotron
+		img(src="/images/failure.svg" class="status-img")
 		h2.warning Paypal Payment Cancelled
 		ul
 			li token = #{token}
