--- a/views/paypal/payment-return.pug
+++ b/views/paypal/payment-return.pug
@@ -8,6 +8,7 @@ block content
 			a(href="/paypal") PayPal
 		li.breadcrumb-item.active Payment return
 	.jumbotron
+		img(src="/images/success.svg" class="status-img")
 		h2 Paypal Payment Success
 		ul
 			li paymentId = #{paymentId}
