--- a/views/index.pug
+++ b/views/index.pug
@@ -4,11 +4,12 @@ block content
 	ol.breadcrumb
 		li.breadcrumb-item.active Home
 	.jumbotron
-		h2 Compare UX for 3 Popular Payment Processors
+		h2 Three popular Payment Processors experience comparsion.
+		p Please select a processor below. The testing procedures mention in the page.
 		ol
 			li
-				a(href="/paypal") PayPal
+				a(href="/paypal") PayPal payment
 			li
-				a(href="/braintree") Braintree
+				a(href="/braintree") Braintree payment
 			li
-				a(href="/stripe") Stripe
+				a(href="/stripe") Stripe payment
