--- a/views/stripe/payment-failure.pug
+++ b/views/stripe/payment-failure.pug
@@ -13,5 +13,6 @@ block content
 				img(src="/images/failure.svg" class="status-img")
 				h1 Payment Failure
 				h3.description.has-error Reason: #{err_msg}
-				p
-					a(href="/stripe") Click here to make payment again
+		.row
+			.col-12
+				a(href="/stripe") Click here to make payment again
