--- a/views/stripe/payment-success.pug
+++ b/views/stripe/payment-success.pug
@@ -12,6 +12,7 @@ block content
 			.col-12
 				img(src="/images/success.svg" class="status-img")
 				h1 Payment Success
-				h3.description Charge Id: #{charge_id}
-				p Thank you for your purchase
+				p.description Charge Id: #{charge_id}
+		.row
+			.col-12
 				a(href="/stripe") Make another Stripe payment
