--- a/views/stripe/payment-warning.pug
+++ b/views/stripe/payment-warning.pug
@@ -13,6 +13,7 @@ block content
 				img(src="/images/success.svg" class="status-img")
 				h1 Payment Success but with warning
 				h3.description Charge Id: #{charge_id}
-				h3.description.has-error Warning message: #{msg}
-				p
+				p.description.has-error Warning message: #{msg}
+		.row
+			.col-12
 					a(href="/stripe") Click here to make payment again
